--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start:api": "node --env-file=.env --watch -r ts-node/register backend/index.ts",
-    "start:db": "json-server db/db.json --port 3002"
+    "create:db": "touch db.json && echo '{\"candidates\": []}' > db.json",
+    "start:api": "tsx watch  --env-file=.env backend/index.ts",
+    "start:db": "json-server db.json --port 3002",
+    "start": "npx concurrently \"npm run start:api\" \"npm run start:db\" \"npm run dev\""
   },
   "dependencies": {
     "@tanstack/react-query": "^5.40.0",
+    "express": "^4.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.12.13",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -28,6 +33,8 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "json-server": "^1.0.0-beta.0",
+    "tsx": "^4.11.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
